# krunner-bridge

./: .gitignore  CMakeLists.txt  README.md  debug_helper.sh  example_calc.py  example_search.py  install.sh  install_example.sh  krunner_bridge.cc  krunner_bridge.desktop  krunner_bridge.h  krunner_bridge.py  krunner_script.h  search_script.py  template.py
python/: setup.py
python/krunner_bridge/: __init__.py
